NewLifeUtils 5.1.6:
    - Fix:          LM - rea() print up                 (-------)
    - Fix:          batch install global option         (-------)
    - Fix:          cstm fix                            (-------)
    - Removal:      batch uninstall global option       (-------)
    - Change:       parse_args regex change             (-------
    )
NewLifeUtils 5.1.5:
    - Fix:          LM - rea() not working              (-------)

NewLifeUtils 5.1.4:
    - Fix:          CSM - Shell() not working           (-------)
    - Fix:          LM - rea() not working              (-------)
    - Removal:      Logger smart input future disabled  (-------)
    - Removal:      CSM {} from start eveny             (-------)

NewLifeUtils 5.1.3:
    - Addition:     RequestModule                       (8778255)
    - Addition:     requirements in setup.py            (1a2415d)
    - Addition:     license in setup.py                 (84c1215)
    - Addition:     platforms in setup.py               (84c1215)
    - Addition:     CHANGELOG                           (c5c7247)
    - Removal:      Copies of the test file             (00258d0)
    - Update:       gitignore (.idea)                   (00258d0)