@@ -1,10 +1,13 @@
+NewLifeUtils 5.1.7:
+    - Fix:                                              (-------)
+
 NewLifeUtils 5.1.6:
     - Fix:          LM - rea() print up                 (-------)
     - Fix:          batch install global option         (-------)
     - Fix:          cstm fix                            (-------)
     - Removal:      batch uninstall global option       (-------)
-    - Change:       parse_args regex change             (-------
-    )
+    - Change:       parse_args regex change             (-------)
+
 NewLifeUtils 5.1.5:
     - Fix:          LM - rea() not working              (-------)
 
